# zwitter

./: .env.example  Makefile  README.md  docker-compose.yaml
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/server/: Cargo.toml
backend/server/src/: bootstrap.rs  lib.rs  main.rs  routes.rs  server.rs
backend/server/src/database/: mod.rs  users_repository_postgres.rs
backend/server/tests/: mod.rs  utils.rs
backend/server/tests/routes/: create_user.rs
client/: pnpm-lock.yaml
client/src-tauri/: tauri.conf.json
