[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
domain = { path = "../domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
macros = { path = "../macros" }
errors = { path = "../errors" }
async-trait = "0.1.89"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
migration = { path = "../migration" }